--- a/UFC-Chicago.ipynb
+++ b/UFC-Chicago.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# UFC Chicago Twitter Stream Topic Modeling\n",
+    "# UFC Chicago Twitter Stream Topic Modeling \n",
+    "By [Chris Tufts](https://twitter.com/devlintufts)\n",
     "\n",
     "This notebook uses Latent Dirichlet Allocation (LDA) to perform topic modeling on a stream of tweets collected during the UFC Chicago event held on July 25th 2015.  The data was collected using Python, Tweepy, and MySQL as outlined [here](http://miningthedetails.com/blog/python/TwitterStreamsPythonMySQL/). The tweets were parsed using a version of [Christopher Pott's happy fun tokenizer](http://sentiment.christopherpotts.net/tokenizing.html) provided by the [World Well Being Project at UPenn](http://www.wwbp.org/data.html).   \n"
    ]
